# rag-multihop-poisoning

./: .gitattributes  .gitignore  CURRENT_CONFIG_STATUS.md  README.md  READY_TO_RUN.md  RESUME.md  RESUME_IMPLEMENTATION.md  SETUP_COMPLETE.md  TARGET_JOURNALS.md  hello.py  proposal_1_multihop_rag_poisoning.md  pyproject.toml  test_asr_fix.py  verify_setup.sh
.claude/: settings.local.json
experiments/: prepare_data.py  run_grid.py  test_single.py
rag-multihop-poisoning/: DATASETS.md  EXPERIMENTS.md  RESTART_INSTRUCTIONS.md  WHY_NQ_PROCESSED_EXISTS.md  demo_resume.py  pyproject.toml  test_generator_comparison.py  test_models_aua.py
rag-multihop-poisoning/configs/: default.yaml
rag-multihop-poisoning/experiments/: prepare_data.py  run_grid.py  test_single.py
rag-multihop-poisoning/results/: all_results.json  checkpoint.json
rag-multihop-poisoning/src/rag_poisoning/: __init__.py
rag-multihop-poisoning/src/rag_poisoning/attacks/: base.py  coe.py
rag-multihop-poisoning/src/rag_poisoning/defenses/: base.py  filterrag.py  ragdefender.py  ragmask.py  ragpart.py
rag-multihop-poisoning/src/rag_poisoning/evaluation/: runner.py
rag-multihop-poisoning/src/rag_poisoning/models/: generator.py  retriever.py
rag-multihop-poisoning/tests/: test_metrics.py
src/rag_poisoning/: utils.py
src/rag_poisoning/attacks/: corruptrag.py  pidp.py  poisonedrag.py
src/rag_poisoning/evaluation/: metrics.py  runner.py
src/rag_poisoning/models/: retriever.py
src/rag_poisoning/pipeline/: rag_pipeline.py
tests/: test_attacks.py  test_defenses.py  test_resume.py
