[project]
name = "rag-multihop-poisoning"
version = "0.1.0"
description = "Multi-hop RAG poisoning attacks with chain-of-evidence variants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "datasets>=2.14.0",
    "beir>=2.0.0",
    "transformers>=4.30.0",
    "ollama>=0.1.0",
    "trackio[apple-gpu]>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "pyserini>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
